force-app/main/default/objects/smagicinteract__Template_Short_Link_Map__c/smagicinteract__Template_Short_Link_Map__c.object-meta.xml
<CustomObject>
    <label>Template Short Link Map</label>
    <nameField>
        <label>Template Short Link Map Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Template Short Link Maps</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>