force-app/main/default/objects/smagicinteract__Template_Short_Link_Map__c/fields/smagicinteract__Short_Link__c.field-meta.xml
<CustomField>
    <fullName>smagicinteract__Short_Link__c</fullName>
    <label>Shortened Link</label>
    <referenceTo>smagicinteract__Shortened_Link__c</referenceTo>
    <relationshipLabel>Template Short Link Maps</relationshipLabel>
    <relationshipName>Template_Short_Link_Maps</relationshipName>
    <relationshipOrder>1</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>