force-app/main/default/objects/smagicinteract__Template_Short_Link_Map__c/fields/smagicinteract__Template__c.field-meta.xml
<CustomField>
    <fullName>smagicinteract__Template__c</fullName>
    <description>Master detail relationship with Converse templates</description>
    <label>Converse Template</label>
    <referenceTo>smagicinteract__SMS_Template__c</referenceTo>
    <relationshipLabel>Template Short Link Maps</relationshipLabel>
    <relationshipName>Template_Short_Link_Maps</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>