force-app/main/default/objects/smagicinteract__Template_Short_Link_Map__c/fields/smagicinteract__URL_Clicks__c.field-meta.xml
<CustomField>
    <fullName>smagicinteract__URL_Clicks__c</fullName>
    <label>URL Clicks</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>